--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <h1>estudos de javascript & react</h1>
+
+  <script src="estudos_de_JS.js"></script>
+  <script src="estudos_DOM.js"></script>
 </body>
+
 </html>
