--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 
 <body>
-  <h1>estudos de javascript & react</h1>
+  <h1 id="title">estudos de javascript & react</h1>
+  <p class="pingao">pingão</p>
+  <div>
+    <input name="email"/>
+    <button onclick="window.document.getElementById('title').remove()">
+     REMOVER
+    </button>
+    <!-- <button onclick="window.document.getElementById('title').add()">
+     ADD
+    </button> -->
+  </div>
 
-  <script src="estudos_de_JS.js"></script>
-  <script src="estudos_DOM.js"></script>
+ 
+
+  <script src="/estudos_JS/estudos_de_JS.js"></script>
+  <script src="/estudos_DOM/estudos_DOM.js"></script>
 </body>
 
 </html>
